# event_simulator

./: .gitignore  MODELING_APPROACHES.md  MODEL_NOTES.md  README.md  SUGGESTION_TRACKER.md  TECHNICAL_REPORT.md  build_prediction_dashboard.py  compare_models.py  compare_regimes.py  compare_runtime.py  pyproject.toml  run_neuro_symbolic_full.sh  simulation.py  summarize_model_report.py  train_learned.py
analysis/: RICHER_60_20_CONDITION_ANALYSIS.md  model_comparison.html  model_comparison.json
analysis/adaptive/: model_comparison.html
analysis/adaptive_60_20/: model_comparison.html  model_comparison.json
analysis/adaptive_richer_60_20/: model_comparison.html  model_comparison.json
analysis/adaptive_richer_60_20_baselines/: model_comparison.html  model_comparison.json
analysis/adaptive_richer_60_20_baselines_rebalanced/: model_comparison.html  model_comparison.json
analysis/adaptive_richer_60_20_final/: model_comparison.html  model_comparison.json
analysis/adaptive_richer_60_20_learned/: model_comparison.html  model_comparison.json  runtime_summary.json
analysis/adaptive_richer_60_20_neural/: model_comparison.html  model_comparison.json  runtime_summary.json
analysis/adaptive_richer_60_20_rebalanced_learned/: model_comparison.html  model_comparison.json  runtime_summary.json
analysis/adaptive_richer_60_20_updated/: model_comparison.html
analysis/adaptive_richer_threshold_refined/: model_comparison.html  model_comparison.json  runtime_summary.json
notebooks/: colab_gpu_benchmark.ipynb
output/: events.csv  index.html  summary.json
(+122 files in other folders)
